# python-ci

./: .coverage  .gitignore  README.md  coverage.xml  pyproject.toml
.github/actions/setup/: action.yaml
.github/workflows/: code-quality.yaml
.github/workflows/actions/setup/: action.yaml
src/python_ci/: __init__.py
tests/python_ci/: test_init.py
